--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This file was created by IntelliJ IDEA (Community Edition) IC-117.747 for binding GitHub repository
+This uses the Android Support Library (http://developer.android.com/tools/extras/support-library.html) and requires API Level 7 and higher.
